name:                wifi-bruteforce
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/kindaro/wifi-bruteforce#readme
license:             BSD3
license-file:        LICENSE
author:              Ignat Insarov
maintainer:          kindaro@gmail.com
copyright:           2017 Ignat Insarov
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable wifi-bruteforce-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , shelly
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kindaro/wifi-bruteforce
